# hyprmonitors

./: Cargo.toml  LICENSE  flake.nix
common/: Cargo.toml
common/src/: error.rs  hyprland.rs  lib.rs  profile.rs
common/src/hyprland/: mod.rs  workspace.rs
common/src/hyprland/monitor/: color_mode.rs  mod.rs  transform.rs  vrr.rs
common/src/profile/: mod.rs
common/src/profile/monitor/: advanced.rs  mod.rs  position.rs  resolution.rs
hyprmonitors/: Cargo.toml
hyprmonitors-tui/: Cargo.toml
hyprmonitors-tui/src/: actions.rs  colors.rs  hyprland.rs  main.rs  mouse.rs  options.rs  snap_mode.rs  state.rs  status.rs  ui.rs
hyprmonitors-tui/src/views/: advanced_settings.rs  help.rs  main.rs  mirror_picker.rs  mod.rs  profile_input.rs  profile_picker.rs  resolution_picker.rs  scale_picker.rs  workspace_assign.rs
hyprmonitors/src/: main.rs  options.rs
hyprmonitors/tests/: profile-edp1-dp2.toml
src/: error.rs  hypr.rs  logs.rs  main.rs  profile.rs
tests/: profile-dp2.toml
