[package]
name = "hyprmonitors"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }
tokio = { version = "1.50.0", features = ["fs", "macros", "process", "rt-multi-thread"] }
toml = { version = "1.1.0" }
