[workspace]
members = ["common", "hyprmonitors", "hyprmonitors-tui"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
glob = { version = "0.3.3" }
ratatui  = { version = "0.29.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
serde_yaml = { version = "0.8.26" }
thiserror = { version = "2.0.18" }
tokio = { version = "1.50.0", features = ["fs", "macros", "process", "rt-multi-thread"] }

common = { path = "common" }
